# pypixelmark

./: README.md  pyproject.toml
src/pypixelwatermark/: __init__.py  watermark.py
test/: test_watermark.py
